[package]
name = "newsify"
version = "0.1.0"
authors = ["Lord Cheta <cmaduabuchi@live.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "newsify"

[dependencies]
actix-web = "4.3.0"

[dev-dependencies]
reqwest = "0.11"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
